fix: model button visibility

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -1245,10 +1245,6 @@ p {
     border-top: unset;
     justify-content: end;
 
-    .btn:first-child {
-      display: none;
-    }
-
     .btn {
       width: 100%;
     }
